design login, forgot password, tabbar, recend, colleagues

--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/activity_forgot_password.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/activity_forgot_password.xml
@@ -1,99 +1,100 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/default_blue" >
+    android:background="@color/white">
 
-    <com.clover.spika.enterprise.chat.views.RobotoThinTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/forgotLayout"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="10dp"
-        android:text="@string/spika_big"
-        android:textColor="@android:color/white"
-        android:textSize="30sp"
-        android:textStyle="bold" />
+    <RelativeLayout
+        android:id="@+id/actionBarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/menu_height">
 
-    <LinearLayout
-        android:id="@+id/forgotLayout"
+        <ImageButton
+            android:id="@+id/cancelBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:background="@drawable/selector_transp_blue"
+            android:contentDescription="@null"
+            android:padding="10dp"
+            android:src="@drawable/btn_back_blue" />
+
+        <TextView
+            android:id="@+id/screenTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="@string/forgot_password"
+            android:textColor="@color/medic_bleep_blue"
+            android:textSize="20sp" />
+
+    </RelativeLayout>
+
+    <TextView
+        android:id="@+id/tvLabelPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:background="@android:color/white"
-        android:orientation="vertical"
-        android:paddingBottom="30dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="30dp" >
+        android:layout_below="@id/actionBarLayout"
+        android:layout_marginTop="30dp"
+        android:gravity="center_horizontal"
+        android:text="@string/enter_your_valid_email"
+        android:textColor="@color/medic_bleep_text_gray"
+        android:textSize="15sp" />
 
-        <RelativeLayout
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tvLabelPassword"
+        android:layout_marginTop="25dp"
+        android:id="@+id/mailAndStars">
+
+        <TextView
+            android:id="@+id/tvRequiredStar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:gravity="center_vertical"
+            android:text="*"
+            android:layout_alignBottom="@+id/username"
+            android:layout_alignTop="@+id/username"
+            android:includeFontPadding="false"
+            android:textColor="@color/red"
+            android:textSize="20sp" />
+
+        <EditText
+            android:id="@+id/username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp" >
+            android:layout_marginRight="20dp"
+            android:layout_toRightOf="@id/tvRequiredStar"
+            android:background="@drawable/et_background"
+            android:hint="@string/email_address"
+            android:maxLines="1"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:textColor="@color/medic_bleep_text_gray"
+            android:textColorHint="@color/medic_bleep_hint_gray"
+            android:textSize="16sp" />
 
-            <ImageView
-                android:id="@+id/usernameImg"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_alignParentLeft="true"
-                android:contentDescription="@null"
-                android:src="@drawable/login_avatar" />
-
-            <com.clover.spika.enterprise.chat.views.RobotoThinEditText
-                android:id="@+id/username"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/usernameImg"
-                android:layout_alignTop="@+id/usernameImg"
-                android:layout_toRightOf="@+id/usernameImg"
-                android:background="@null"
-                android:hint="@string/username_or_email"
-                android:maxLines="1"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-                android:singleLine="true" />
-
-            <View
-                android:id="@+id/bottomLine"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_below="@+id/usernameImg"
-                android:layout_marginTop="10dp"
-                android:background="@color/default_blue" />
-        </RelativeLayout>
-
-        
-
-        <com.clover.spika.enterprise.chat.views.RobotoThinButton
+        <Button
             android:id="@+id/submitBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="20dp"
+            android:layout_below="@id/username"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
+            android:layout_alignLeft="@id/username"
+            android:layout_alignRight="@id/username"
+            android:layout_marginTop="15dp"
             android:background="@drawable/selector_green"
             android:gravity="center"
             android:padding="10dp"
-            android:text="@string/submit_changes"
+            android:text="@string/send"
             android:textColor="@android:color/white"
-            android:textSize="20sp" />
-        
-         <com.clover.spika.enterprise.chat.views.RobotoThinButton
-            android:id="@+id/cancelBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/selector_green"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="@string/cancel_big"
-            android:textColor="@android:color/white"
-            android:textSize="20sp" />
-    </LinearLayout>
+            android:textSize="20sp"
+            android:textStyle="bold" />
+    </RelativeLayout>
+
+
 
 </RelativeLayout>
