--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/fragment_lobby_child.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/fragment_lobby_child.xml
@@ -1,13 +1,13 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white" >
+    android:background="@color/medic_bleep_gray_background" >
 
     <com.clover.spika.enterprise.chat.views.pulltorefresh.PullToRefreshListView
         android:id="@+id/mainListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="@color/medic_bleep_gray_background"
         android:divider="@null"
         android:dividerHeight="0dp"
         android:fadingEdge="none"
