--- a/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/item_lobby.xml
+++ b/SpikaEnterpriseAndroidStudio/spikaEclipse/src/main/res/layout/item_lobby.xml
@@ -1,24 +1,25 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/itemLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/transparent" >
+    android:background="@color/transparent">
 
     <RelativeLayout
         android:id="@+id/clickLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp" >
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@color/white">
 
         <com.clover.spika.enterprise.chat.views.RoundImageView
             android:id="@+id/recentImage"
             android:layout_width="65dp"
             android:layout_height="65dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
-            android:padding="1dp"
+            android:layout_margin="10dp"
             android:contentDescription="@null"
+            android:padding="1dp"
             android:src="@drawable/default_user_image" />
 
         <TextView
@@ -39,22 +40,22 @@
             android:textStyle="bold"
             android:visibility="gone" />
 
-        <FrameLayout
+        <RelativeLayout
             android:id="@+id/textContent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@id/recentImage"
             android:layout_alignTop="@id/recentImage"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@id/recentImage"
-            android:orientation="vertical" >
+            android:layout_toRightOf="@id/recentImage">
 
             <RelativeLayout
-                android:id="@+id/nameAndTimeStampOfLastMessage"
+                android:id="@+id/nameAndLastMessage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp" >
+                android:layout_marginTop="5dp"
+                android:layout_toLeftOf="@+id/lastMessageTime"
+                android:gravity="center_vertical">
 
                 <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
                     android:id="@+id/recentName"
@@ -62,49 +63,39 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:maxLines="1"
-                    android:paddingLeft="5dp"
-                    android:paddingRight="10dp"
-                    android:textColor="@color/black"
-                    android:layout_toLeftOf="@+id/lastMessageTime"
+                    android:textColor="@color/medic_bleep_blue"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
-                <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
-                    android:id="@+id/lastMessageTime"
+                <github.ankushsachdeva.emojicon.EmojiconTextView
+                    android:id="@+id/lastMessage"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
-                    android:gravity="center_vertical"
-                    android:layout_centerVertical="true"
                     android:maxLines="1"
-                    android:paddingLeft="5dp"
-                    android:paddingRight="10dp"
-                    android:layout_alignParentRight="true"
-                    android:textColor="@color/text_dark_gray"
+                    android:textStyle="italic"
+                    android:layout_below="@id/recentName"
+                    android:layout_marginTop="5dp"
+                    android:textColor="@color/medic_bleep_hint_gray"
                     android:textSize="15sp" />
+
             </RelativeLayout>
 
-            <github.ankushsachdeva.emojicon.EmojiconTextView
-                android:id="@+id/lastMessage"
+            <TextView
+                android:id="@+id/lastMessageTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:layout_marginBottom="10dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
                 android:ellipsize="end"
+                android:gravity="center_vertical"
                 android:maxLines="1"
-                android:paddingLeft="5dp"
-                android:paddingRight="20dp"
+                android:paddingRight="10dp"
                 android:textColor="@color/text_dark_gray"
-                android:textSize="15sp"/>
-        </FrameLayout>
+                android:textSize="15sp" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_alignLeft="@id/textContent"
-            android:layout_below="@id/textContent"
-            android:layout_marginTop="5dp"
-            android:background="@color/light_light_gray" />
+        </RelativeLayout>
+
     </RelativeLayout>
 
 </RelativeLayout>
